ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bal-sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "bal-sample"
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 9090
